--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html" aria-expanded="false">Home</a></li>
                     <li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4" aria-expanded="false">Find deals</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features5-8">Travel Accessories&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4">Digital Nomad</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3" aria-expanded="false">Blog</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3">About</a></li></ul>
                 <div class="icons-menu">
-                    <div class="mbr-section-btn"><a class="btn btn-success display-4" href=""><strong>Last Video</strong></a>
+                    <div class="mbr-section-btn"><a class="btn btn-white display-4" href=""><strong>Last Video</strong></a>
                    
                          <a class="btn btn-warning display-4" href=""><strong>Subscribe</strong></a></div>
                 </div>
