create github pages

--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
             <div class="col-12 col-lg-6 col-md-12">
                 <div class="text-wrapper">
                         <h2 class="section-title mbr-fonts-style mbr-bold display-2">About Us</h2>
-                        <h3 class="section-subtitle mbr-fonts-style mt-0 mb-0 display-7"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.                    
-                        </h3>
+                        <h3 class="section-subtitle mbr-fonts-style mt-0 mb-0 display-7">Stackin Stamps helps you find the best deals in the world to live, work and travel as a remote worker. Every second, it collects millions of data points on thousands of cities around the world, from cost of living, temperature to safety. With that data, Nomad List gives you an idea of where it's best for you to go.<div><br></div><div>Nomad List has much more features than just that though: you can do things like find coworking spaces in each city, see how warm it is in a city in a specific month, search for places with specific climates, read reviews and see who of Nomad List's members is in a city now or will be there soon.</div></h3>
                     </div>
             </div>
 
