create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -59,8 +59,8 @@
         </div>
         
         <div class="button-align">
-            <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://tp.media/click?shmarker=155957&promo_id=7736&source_type=link&type=click&campaign_id=200&trs=88350" target="_blank"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>Download on Appstore</a>
-                <a class="btn btn-black display-4" href="https://tp.media/click?shmarker=155957&promo_id=7737&source_type=link&type=click&campaign_id=200&trs=88350" target="_blank"><span class="socicon socicon-play mbr-iconfont mbr-iconfont-btn"></span>Download on Playstore</a></div>
+            <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://tp.media/click?shmarker=155957&promo_id=7736&source_type=link&type=click&campaign_id=200&trs=88350" target="_blank"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span><strong>Download on Appstore</strong></a>
+                <a class="btn btn-black display-4" href="https://tp.media/click?shmarker=155957&promo_id=7737&source_type=link&type=click&campaign_id=200&trs=88350" target="_blank"><span class="socicon socicon-play mbr-iconfont mbr-iconfont-btn"></span><strong>Download on Playstore</strong></a></div>
         </div>
     </div>
 </section>
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="row">
             <div class="wrapper col-12 col-md-12">
-                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Find others cool travel deals</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Find Others Cool Travel Deals</strong></h3>
                 <h3 class="mbr-section-subtitle mbr-fonts-style display-4">Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.</h3>
             </div>
         </div>
