create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -37,7 +37,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-12">
                 <div class="section-head">
-                    <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>FIND FLIGHT AND HOTEL DEALS</strong></h3>
+                    <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>FIND FLIGHT AND HOTEL DEALS WITH WAYAWAY</strong></h3>
                     
                 </div>
                 <p class="mbr-text mbr-fonts-style display-7">
@@ -111,7 +111,9 @@
     </div>
 </section>
 
-<div id="custom-html-3p"><script src="//tp.media/content?promo_id=7293&shmarker=155957&campaign_id=200&trs=88350&locale=en_us&Checkbox_9=false&primary=%230C131D&dark=%230C131D&light=%23FFFFFF&secondary=%23F1EDFC&powered_by=true" charset="utf-8"></script></div>
+<div id="custom-html-4m"><script src="//tp.media/content?currency=usd&promo_id=7291&shmarker=155957&campaign_id=200&trs=88350&locale=en_us&limit=8&powered_by=false&secondary=%23FEDB01" charset="utf-8"></script></div>
+
+<div id="custom-html-4n"><script src="//tp.media/content?currency=usd&promo_id=7264&shmarker=155957&campaign_id=200&trs=88350&locale=en_us&powered_by=false&one_way=true&only_direct=true&period=current_month&range=1%2C30&primary=%23B9A0FD&color_background=%23ffffff&achieve=%23BAA2FB&dark=%23000000&light=%23FFFFFF" charset="utf-8"></script></div>
 
 <section data-bs-version="5.1" class="article2 cid-tjU9Z5pnp2" id="article2-4j">
     
