create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="row">
             <div class="wrapper col-12 col-md-12">
-                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Try Wayaway Flight Search Now</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Stay Updated with Flight Deals</strong></h3>
                 
             </div>
         </div>
