create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -104,14 +104,12 @@
     <div class="container">
         <div class="row">
             <div class="wrapper col-12 col-md-12">
-                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Stay Updated with Flight Deals</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Best dates for Your Next Trip</strong></h3>
                 
             </div>
         </div>
     </div>
 </section>
-
-<div id="custom-html-4m"><script src="//tp.media/content?currency=usd&promo_id=7291&shmarker=155957&campaign_id=200&trs=88350&locale=en_us&limit=8&powered_by=false&secondary=%23FEDB01" charset="utf-8"></script></div>
 
 <div id="custom-html-4n"><script src="//tp.media/content?currency=usd&promo_id=7264&shmarker=155957&campaign_id=200&trs=88350&locale=en_us&powered_by=false&one_way=true&only_direct=true&period=current_month&range=1%2C30&primary=%23B9A0FD&color_background=%23ffffff&achieve=%23BAA2FB&dark=%23000000&light=%23FFFFFF" charset="utf-8"></script></div>
 
