--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="row">
             <div class="wrapper col-12 col-md-12">
-                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Best Dates For Your Next Trip</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Find The Best Dates For Your Next Trip</strong></h3>
                 
             </div>
         </div>
