create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -26,7 +26,15 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script>
+var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
+(function(d){
+  var s = d.createElement("script");
+  s.src = "https://cdn.memberspace.com/scripts/widgets.js";
+  var e = d.getElementsByTagName("script")[0];
+  e.parentNode.insertBefore(s,e);
+}(document));
+</script>
   
 </head>
 <body>
