--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script>
+var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
+(function(d){
+  var s = d.createElement("script");
+  s.src = "https://cdn.memberspace.com/scripts/widgets.js";
+  var e = d.getElementsByTagName("script")[0];
+  e.parentNode.insertBefore(s,e);
+}(document));
+</script>
   
 </head>
 <body>
@@ -57,7 +65,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html" aria-expanded="false">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4" aria-expanded="false">Find deals</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features5-8">Travel Accessories&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4">Digital Nomad</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3" aria-expanded="false">Blog</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3">About</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4" aria-expanded="false">Find deals</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features5-8">Travel Accessories&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#features2-4">Digital Nomad</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3" aria-expanded="false">Blog</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3">About</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html#header2-3">Login</a></li></ul>
                 <div class="icons-menu">
                     <div class="mbr-section-btn"><a class="btn btn-white display-4" href=""><strong>Last Video</strong></a>
                    
