create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
                 <div class="icons-menu">
                     <div class="mbr-section-btn"><a class="btn btn-white display-4" href=""><strong>Last Video</strong></a>
                    
-                         <a class="btn btn-warning display-4" href=""><strong>Subscribe</strong></a></div>
+                         <a class="btn btn-primary display-4" href=""><strong>Subscribe</strong></a></div>
                 </div>
             </div>
         </div>
@@ -528,7 +528,6 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
   
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
   </body>
 </html>
