create github pages

--- a/digitalnomadcourse.html
+++ b/digitalnomadcourse.html
@@ -38,9 +38,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
 </head>
 <body>
   
-  
-
-<section data-bs-version="5.1" class="article4 cid-tjUTp1QjT8" id="article4-4q">
+  <section data-bs-version="5.1" class="article4 cid-tjUTp1QjT8" id="article4-4q">
     
 
     
@@ -99,7 +97,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
       <script src="assets/theme/js/script.js"></script>
   
   
-  
+  <meta name="robots" content="noindex, nofollow"><style>#__memberspace_modal_protected_page { position:fixed; top:0; left:0; width:100%; height:100%; background:#fff; z-index:2147483646; }</style><div id="__memberspace_modal_protected_page"></div>
   <input name="animation" type="hidden">
   </body>
 </html>
