--- a/travelaccessories.html
+++ b/travelaccessories.html
@@ -216,7 +216,8 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
-      <script src="assets/masonry/masonry.pkgd.min.js"></script>
+      <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vimeoplayer/player.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
