create github pages

--- a/flightsandhotels.html
+++ b/flightsandhotels.html
@@ -82,7 +82,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
                     
                 </div>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Why pay full price when you can save hundreds and get cashback? <strong>Wayaway</strong> is an innovative flight search engine trusted by millions of users, that compares airfares offered by all major US and global airlines and hundreds of travel agencies to find the best flight deals for specific travel dates as well as cheaper tickets on alternative dates. You can also sign up below to receive 10% off on the Wayaway Plus Membership and enjoy cashback on flights, hotels, car rentals, tours, and more.
+                    Why pay full price when you can save hundreds and get cashback? <strong>Wayaway</strong> is an innovative flight search engine trusted by millions of users, that compares airfares offered by all major US and global airlines and hundreds of travel agencies to find the best flight deals for specific travel dates as well as cheaper tickets on alternative dates. <br><br>You can also sign up below for the Wayaway Plus Membership&nbsp;to receive 60% off and enjoy cashback on flights, hotels, car rentals, tours, and more.
                 </p>
             </div>
         </div>
