--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <div class="text-container">
-                        <p class="label-text mbr-fonts-style display-4"><strong>Digital Course -</strong></p>
+                        <p class="label-text mbr-fonts-style display-4"><strong>Digital Audio Course -</strong></p>
                         <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Become a Digital Nomad</strong></h2>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            This step-by-step guide will show you how to unleash yourself from the conventional lifestyle and live a life based on your terms traveling the world and making money.&nbsp;It means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want because you don’t have a boss breathing down your neck! In this guide, you will learn how easy it really can be to create an online business and run it from anywhere in the world. At the same time though, it’s also going to go a little further than your typical guide and hopefully give you some tips on how to make your trip absolutely incredible.</p>
+                            This step-by-step audio guide will show you how to unleash yourself from the conventional lifestyle and live a life based on your terms traveling the world and making money.&nbsp;<br><br>It means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want because you don’t have a boss breathing down your neck!<br><br>This guide is jam-packed with information, resources, and tools that you will need to be set for success. You will learn how easy it really can be to create an online business and run it from anywhere in the world. <br><br>At the same time though, it’s also going to go a little further than your typical guide and hopefully give you some tips on how to make your trip absolutely incredible.</p>
                     </div>
                     
                     <div class="btn-container">
