create github pages

--- a/traveldeals.html
+++ b/traveldeals.html
@@ -92,7 +92,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
         <div class="align-center">
             <h5 class="col-12 col-md-8 mbr-section-title mbr-fonts-style display-2"><strong>THOUSANDS OF PEOPLE ARE USING THIS POWERFUL FLIGHT&nbsp;</strong><strong>SEARCH ENGINE APP TO SAVE HUNDREDS ON FLIGHT TICKETS&nbsp;</strong><br></h5>
         </div>
-        <p class="mbr-text mbr-fonts-style display-5">Why pay full price when you can <strong>save hundreds and get cashback</strong>? <strong>Wayaway</strong> is a <strong>free</strong> innovative flight search engine <strong>trusted by millions of users</strong>, that compares airfares offered by all major US and global airlines and hundreds of travel agencies to <strong>find the best flight deals</strong> for specific travel dates as well as <strong>cheaper tickets</strong> on alternative dates.<br><br>Sign up below to receive 60% off the Wayaway Plus Membership when you download the app and enjoy cashback on flights, hotels, car rentals, tours, and more.</p>
+        <p class="mbr-text mbr-fonts-style display-5">Why pay full price when you can <strong>save hundreds and get cashback</strong>? <strong>Wayaway</strong> is a <strong>free</strong> innovative flight search engine <strong>trusted by millions of users</strong>, that compares airfares offered by all major US and global airlines and hundreds of travel agencies to <strong>find the best flight deals</strong> for specific travel dates as well as <strong>cheaper tickets</strong> on alternative dates.<br><br>Sign up below to <strong>receive 60% off</strong> the Wayaway Plus Membership when you download the app and enjoy <strong>cashback on flights, hotels, car rentals, tours,</strong> and more.</p>
         
     </div>
 </section>
