--- a/youarein.html
+++ b/youarein.html
@@ -78,7 +78,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             <div class="col-md-12 col-lg-12">
                 <div class="section-head">
                     <h3 class="mbr-section-title mbr-fonts-style display-2"><strong>Congrats you are in!</strong></h3>
-                    <h4 class="mbr-section-subtitle mbr-fonts-style display-7"><br>We have sent the download link to your email inbox and the 60% off promo code to sign up for the Wayaway Membership Plus.</h4>
+                    <h4 class="mbr-section-subtitle mbr-fonts-style display-7"><br>We have sent the download link to <strong>your email inbox </strong>and the 60% off promo code to sign up for the Wayaway Membership Plus.</h4>
                 </div>
                 <p class="mbr-text mbr-fonts-style display-1"><strong>BUT WAIT, BEFORE YOU GO</strong></p>
             </div>
