--- a/digitalnomadcourse.html
+++ b/digitalnomadcourse.html
@@ -35,7 +35,15 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
   e.parentNode.insertBefore(s,e);
 }(document));
 </script>
-  
+  <script>
+var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
+(function(d){
+  var s = d.createElement("script");
+  s.src = "https://cdn.memberspace.com/scripts/widgets.js";
+  var e = d.getElementsByTagName("script")[0];
+  e.parentNode.insertBefore(s,e);
+}(document));
+</script>
 </head>
 <body>
   
