create github pages

--- a/digitalnomadcourse.html
+++ b/digitalnomadcourse.html
@@ -81,7 +81,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             <div class="wrapper col-12 col-md-12">
                 <h3 class="mbr-section-title mbr-fonts-style display-1">
                     <strong>Subscribe for<br>our exclusive content</strong></h3>
-                <h3 class="mbr-section-subtitle mbr-fonts-style display-4">Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.<br><br><br>https://stackinstamps.memberspace.com/content/f3d136aa1be?display=inline</h3>
+                <h3 class="mbr-section-subtitle mbr-fonts-style display-4">Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae.<br></h3>
             </div>
         </div>
     </div>
