--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html" aria-expanded="false">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="flightsandhotels.html" aria-expanded="false">Find Travel Deals</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="travelaccessories.html">Travel Accessories&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="becomeadigitalnomad.html">Digital Nomad Guide</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#features1-1s" aria-expanded="false">Blog</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#countres1-2a">About</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="flightsandhotels.html" aria-expanded="false">Find Travel Deals</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="travelaccessories.html">Travel Accessories&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="travelfunded.html">Travel Funded&nbsp;Guide</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#features1-1s" aria-expanded="false">Blog</a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#countres1-2a">About</a></li></ul>
                 <div class="icons-menu">
                     <div class="mbr-section-btn"><a class="btn btn-white display-4" href="https://stackinstamps.memberspace.com/member/sign_in"><strong>Member Login</strong></a></div>
                 </div>
@@ -89,7 +89,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
                     <h5 class="mbr-section-title mbr-fonts-style display-1"><strong>Stackin' Stamps</strong></h5>
                     <p class="mbr-text mbr-fonts-style display-7">Explore the world for less and get your passport stacked up on stamps</p>
                     <div class="button-align">
-                        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="flightsandhotels.html"><strong>Find Flight &amp; Hotel Deals</strong></a><a class="btn btn-black display-4" href="becomeadigitalnomad.html"><strong>Become a Digital Nomad</strong></a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="flightsandhotels.html"><strong>Find Flight &amp; Hotel Deals</strong></a><a class="btn btn-black display-4" href="travelfunded.html"><strong>Become a Travelpreneur</strong></a></div>
                     </div>
                 </div>
             </div>
@@ -151,8 +151,8 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
                     <div class="item-wrapper">
                         <p class="side-subtitle display-4">DIGITAL NOMAD COURSE</p>
                         <p class="date mbr-fonts-style mbr-text display-5">Healthy Lifestyle</p>
-                        <h4 class="card-heading date mbr-fonts-style mbr-text display-7">The Digital Nomad is a step-by-step guide on how you can escape the rat race and live the life of your dream traveling the world while making money online...</h4>
-                        <h5 class="link mbr-fonts-style display-4"><a href="index.html" class="text-warning"></a><a href="becomeadigitalnomad.html" class="text-primary">Learn More Now&nbsp;</a><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="34px" height="16px" viewBox="0 0 34.53 16" xml:space="preserve"><a href="becomeadigitalnomad.html" class="text-primary">
+                        <h4 class="card-heading date mbr-fonts-style mbr-text display-7">The Travel Funded is a step-by-step guide on how you can escape the rat race and live the life of your dream traveling the world while making money online...</h4>
+                        <h5 class="link mbr-fonts-style display-4"><a href="index.html" class="text-warning"></a><a href="travelfunded.html" class="text-primary">Learn More Now&nbsp;</a><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="34px" height="16px" viewBox="0 0 34.53 16" xml:space="preserve"><a href="becomeadigitalnomad.html" class="text-primary">
                                     </a><rect class="qodef-button-line" y="7.6" width="34" height=".4"></rect><a href="becomeadigitalnomad.html" class="text-primary">
                                     </a><path class="qodef-button-cap qodef-button-cap-fake" d="M25.83.7l.7-.7,8,8-.7.71Zm0,14.6,8-8,.71.71-8,8Z"></path><a href="becomeadigitalnomad.html" class="text-primary">
                                 </a></svg></h5>
@@ -179,14 +179,14 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <div class="text-container">
-                        <p class="label-text mbr-fonts-style display-4"><strong>Digital Audio Course -</strong></p>
-                        <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Become a Digital Nomad</strong></h2>
+                        <p class="label-text mbr-fonts-style display-4"><strong>Digital&nbsp; Guide -</strong></p>
+                        <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Travel Funded</strong></h2>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            This step-by-step audio guide will show you how to unleash yourself from the conventional lifestyle and live a life based on your terms traveling the world and making money.&nbsp;<br><br>It means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want because you don’t have a boss breathing down your neck!<br><br>This guide is jam-packed with information, resources, and tools that you need to be set for success. You will learn how easy it really can be to create an online business and run it from anywhere in the world. <br><br>At the same time though, it’s also going to go a little further than your typical guide and hopefully give you some tips on how to make your trip absolutely incredible.</p>
+                            This step-by-step guide will show you how to unleash yourself from the conventional lifestyle and live a life based on your terms traveling the world and making money.&nbsp;<br><br>It means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want because you don’t have a boss breathing down your neck!<br><br>This guide is jam-packed with information, resources, and tools that you need to be set for success. You will learn how easy it really can be to create an online business and run it from anywhere in the world. <br><br>At the same time though, it’s also going to go a little further than your typical guide and hopefully give you some tips on how to make your trip absolutely incredible.</p>
                     </div>
                     
                     <div class="btn-container">
-                        <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="becomeadigitalnomad.html"><strong>Get Started Now</strong></a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="travelfunded.html"><strong>Get Started Now</strong></a></div>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@ var MemberSpace = window.MemberSpace || {"subdomain":"stackinstamps"};
             <div class="col-12 col-lg-6 col-md-12">
                 <div class="text-wrapper">
                         <h2 class="section-title mbr-fonts-style mbr-bold display-2">About Us</h2>
-                        <h3 class="section-subtitle mbr-fonts-style mt-0 mb-0 display-7"><strong>Stackin Stamps has</strong> helped thousands of travelers save on flight tickets, hotels, rentals, and more through their trusted partners. Their members Find the best deals using a travel aggregator that gives travelers the best rates on airfares and other travel deals.<br><br><div>Stackin Stamps also has a Digital Nomad program that helps Members quit the conventional lifestyle and live a life based on their terms traveling the world and making money.</div><br><div>The program teaches members how to create an online business and run it from anywhere in the world which means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want. <a href="becomeadigitalnomad.html" class="text-primary">Learn more now</a></div></h3>
+                        <h3 class="section-subtitle mbr-fonts-style mt-0 mb-0 display-7"><strong>Stackin Stamps has</strong> helped thousands of travelers save on flight tickets, hotels, rentals, and more through their trusted partners. Their members Find the best deals using a travel aggregator that gives travelers the best rates on airfares and other travel deals.<br><br><div>Stackin Stamps also has a Travel Funded program that helps Members quit the conventional lifestyle and live a life based on their terms traveling the world and earning.</div><br><div>The program teaches members how to create an online business and run it from anywhere in the world which means being able to work from a beach while sipping a cocktail and being able to do whatever you want, whenever you want. <a href="travelfunded.html" class="text-primary">Learn more now</a></div></h3>
                     </div>
             </div>
 
