--- a/travelfundedguide.html
+++ b/travelfundedguide.html
@@ -368,7 +368,7 @@ src="https://www.facebook.com/tr?id=1187356651845118&ev=PageView&noscript=1"
                 <div class="text-wrapper">
                     <div class="text-container">
                         <p class="label-text mbr-fonts-style display-4"><strong>Your</strong></p>
-                        <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Extra Bonus For Enrolling Today</strong></h2>
+                        <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Extra Bonus For Enrolling</strong></h2>
                         <p class="mbr-text mbr-fonts-style display-7">This <strong>transformational</strong> audiobook " <strong>WIRED FOR SUCCESS</strong>" will teach you&nbsp;some <strong>concrete and straightforward steps</strong> that you can take to begin using <strong>your freedom and your power</strong> and exercising your will so that you can get <strong>the life you've always wanted.</strong></p>
                     </div>
                     
